--- a/nginx/confs/nginx.conf
+++ b/nginx/confs/nginx.conf
@@ -27,4 +27,6 @@ http {
 	include /etc/nginx/sites-enabled/*;
 
 	resolver 8.8.8.8;
+
+	log_format  graylog2_format  '$remote_addr - $remote_user [$time_local] "$request" $status $body_bytes_sent "$http_referer" "$http_user_agent" "$http_x_forwarded_for" <msec=$msec|connection=$connection|connection_requests=$connection_requests|millis=$request_time>';
 }
