--- a/nginx/main.conf
+++ b/nginx/main.conf
@@ -2,28 +2,25 @@ server {
     listen 80;
     server_name blocktimes.io www.blocktimes.io;
 
+    #ssl on;
+    #ssl_certificate /etc/ssl/private/main.crt;
+    #ssl_certificate_key /etc/ssl/private/main.key;
+
+    #ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    #ssl_prefer_server_ciphers on;
+    #ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
+
+    error_log syslog:server=graylog:12302;
+    access_log syslog:server=graylog:12301 graylog2_format;
+
     charset utf-8;
     client_max_body_size 30m;
 
     set $ROOT_DIR /var/www/html;
 
-    error_log /var/log/nginx/main-error.log;
-    access_log /var/log/nginx/main-access.log;
-
     location / {
         proxy_pass http://unix:///opt/run/gunicorn.socket;
         include proxy_params;
-    }
-
-    location /logs/ {
-        proxy_pass  http://kibana:5601/;
-
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
-
     }
 
     location /admin/ {
