[docker] chore: Added front on react in nginx conf

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,6 +56,7 @@ services:
       - ./back/run:/opt/run
 
       # Statics
+      - ./front/:/var/www/html/front
       - ./admin/dist:/var/www/html/admin
       - ./back/media:/var/www/html/media
       - ./back/static:/var/www/html/static
