--- a/nginx/main.conf
+++ b/nginx/main.conf
@@ -18,14 +18,14 @@ server {
 
     set $ROOT_DIR /var/www/html;
 
-    location / {
+    location /api/ {
         proxy_pass http://unix:///opt/run/gunicorn.socket;
         include proxy_params;
     }
 
-    location /admin/ {
-        alias /var/www/html/admin/;
-        try_files $uri$args $uri$args/ /admin/index.html;
+    location /django-admin/ {
+        proxy_pass http://unix:///opt/run/gunicorn.socket;
+        include proxy_params;
     }
 
     location /media/  {
@@ -36,5 +36,15 @@ server {
     location /static/  {
         root $ROOT_DIR;
         include static_params;
+    }
+
+    location /admin/ {
+        alias /var/www/html/admin/;
+        try_files $uri$args $uri$args/ /admin/index.html;
+    }
+
+    location / {
+        alias /var/www/html/front/;
+        try_files $uri $uri/ /index.html;
     }
 }
