[docker] refact: Used port instead of socket file in Nginx

--- a/nginx/main.conf
+++ b/nginx/main.conf
@@ -19,7 +19,7 @@ server {
     set $ROOT_DIR /var/www/html;
 
     location /api/ {
-        proxy_pass http://unix:///opt/run/gunicorn.socket;
+        proxy_pass  http://back:8000;
         include proxy_params;
     }
 
